testdata/scenarios/02_4-single-policy/k8s/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: kgateway-system
  hostnames:
    - "api.example.com"
  rules:
  - filters:
    - type: RequestMirror
      requestMirror:
        # Mirror all requests to the httpbin-mirror service for traffic shadowing
        backendRef:
          name: httpbin-mirror
          namespace: httpbin
          port: 8000
    backendRefs:
    # Primary backend — serves the live traffic
    - name: httpbin
      namespace: httpbin
      port: 8000
